--- a/learning_with_teacher.ipynb
+++ b/learning_with_teacher.ipynb
@@ -3934,11 +3934,11 @@
    "outputs": [],
    "source": [
     "param_grid = [\n",
-    "    {\n",
-    "        'models': [DecisionTreeClassifier(random_state=RANDOM_STATE)],\n",
-    "        'models__max_depth': range(2, 5),\n",
-    "        'models__max_features': range(2, 5)\n",
-    "    },\n",
+    "    # {\n",
+    "    #     'models': [DecisionTreeClassifier(random_state=RANDOM_STATE)],\n",
+    "    #     'models__max_depth': range(2, 5),\n",
+    "    #     'models__max_features': range(2, 5)\n",
+    "    # },\n",
     "    {\n",
     "        'models': [KNeighborsClassifier()],\n",
     "        'models__n_neighbors': range(5, 100)\n",
